@@ -28,6 +28,7 @@ Version 2.7.0
 * oms2v2d: some improvements for special cases, don't print unneeded zeros
 * oms2v2d: add "profile" mode
 * oms2v2d: some improvements for real-time correlation
+* Restore capability to override a non-VDIF format with a VDIF format
 
 Version 2.6.0
 ~~~~~~~~~~~~~
